--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -13,7 +15,10 @@
         android:theme="@style/Theme.HealthAppElderly"
         tools:targetApi="31">
         <activity
-            android:name=".phoneSignUpTest"
+            android:name=".ElderView"
+            android:exported="false" />
+        <activity
+            android:name=".FirstLogin"
             android:exported="false" />
         <activity
             android:name=".MainActivity"
