--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,6 +15,9 @@
         android:theme="@style/Theme.HealthAppElderly"
         tools:targetApi="31">
         <activity
+            android:name=".mealViewer"
+            android:exported="false" />
+        <activity
             android:name=".ElderlySignUp"
             android:exported="false" />
         <activity
@@ -25,7 +28,7 @@
             android:exported="false" />
         <activity
             android:name=".mealReminder"
-            android:exported="false"/>
+            android:exported="false" />
         <activity
             android:name=".MainActivity"
             android:exported="true">
